fix: align öppetider

--- a/site/assets/css/style.less
+++ b/site/assets/css/style.less
@@ -70,6 +70,11 @@ html, body {
             padding-right: 0;
             padding-bottom: 0.4rem;
             padding-top: 0.4rem;
+            display: flex;
+            justify-content: space-between;
+            .time {
+                margin-right: 20%;
+            }
             a {
                 color: @footer-text-color;
             }
